Removed JVM options, since not needed for Java 11